--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -101,7 +101,8 @@ main nav .nav-right button {
     color: var(--cor-principal);
 }
 
-main nav .nav-right button {
+main nav .nav-right button,
+main nav .nav-right select {
     padding: 8px 12px;
     border-radius: 8px;
     border: 1px solid #dcdcdc;
