--- a/PaginaPrincipal/styleIndex.css
+++ b/PaginaPrincipal/styleIndex.css
@@ -124,9 +124,9 @@ main .kanban {
 }
 
 /* Esconde barra de rolagem no Safari/Chrome */
-.kanban::-webkit-scrollbar {
+/* .kanban::-webkit-scrollbar {
     display: none;
-}
+} */
 
 /* Responsividade: tablets e menores */
 @media (max-width: 1024px) {
@@ -921,6 +921,7 @@ textarea {
     width: 100%;
     resize: none;
     border-radius: 10px;
+    padding: 10px;
 }
 
 textarea:focus {
@@ -1271,6 +1272,14 @@ form#dailyForm button {
     gap: 20px;
 }
 
+.statusAnterior h4 {
+    font-weight: 500;
+}
+
+span.aprovadaComAjustes {
+    font-weight: bold;
+}
+
 /* ================= Sidebar geral ================= */
 .sidebar-right {
     position: fixed;
@@ -1314,10 +1323,6 @@ form#dailyForm button {
     cursor: pointer;
     font-size: 1.6rem;
     transition: transform 0.2s;
-}
-
-.close-button:hover {
-    transform: rotate(90deg);
 }
 
 /* ================= Seções internas ================= */
