--- a/Gestao/style.css
+++ b/Gestao/style.css
@@ -298,6 +298,12 @@ main>div,
     font-size: 14px;
 }
 
+.colab-circle img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
 
 .tooltip {
     position: relative;
