--- a/Arquivos/style.css
+++ b/Arquivos/style.css
@@ -199,6 +199,8 @@ tr:hover {
     border-radius: 10px;
     max-width: 500px;
     width: 100%;
+    max-height: 80vh;
+    overflow-y: auto;
 }
 
 .modal-content h2 {
