--- a/PaginaPrincipal/styleIndex.css
+++ b/PaginaPrincipal/styleIndex.css
@@ -1438,6 +1438,7 @@ span.aprovadaComAjustes {
 .arquivos-categoria {
     margin-left: 10px;
     margin-top: 8px;
+    padding-right: 20px;
 }
 
 .cat-header {
@@ -1470,16 +1471,6 @@ span.aprovadaComAjustes {
     color: var(--cor-principal);
     margin-top: 2px;
 }
-
-/* Permite que caminhos longos quebrem em múltiplas linhas sem estourar o contêiner */
-.path {
-    display: block;
-    max-width: 100%;
-    white-space: normal; /* permite quebra de linha */
-    overflow-wrap: anywhere; /* quebra onde for necessário */
-    word-break: break-all; /* fallback para navegadores antigos */
-}
-
 
 
 /* Animação */
